--- a/lab_openstack/photo-app-stack.yml
+++ b/lab_openstack/photo-app-stack.yml
@@ -1,6 +1,6 @@
 heat_template_version: rocky
 
-description: Example template with one bastion host and an internal network
+description: Photo Sharing Application Heat Stack
 
 parameters:
   ssh_keys:
@@ -11,16 +11,37 @@ resources:
   # ==================================================
   # SECURITY GROUPS
   # ==================================================
-  ssh_security_group:
+  external_security_group:
     type: OS::Neutron::SecurityGroup
     properties:
-      description: "SSH"
-      name: ssh_security_group
+      description: "External available connections"
+      name: external_security_group
       rules:
         - remote_ip_prefix: 0.0.0.0/0
           protocol: tcp
           port_range_min: 22
           port_range_max: 22
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 80
+          port_range_max: 80
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 443
+          port_range_max: 443
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 6443
+          port_range_max: 6443
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 8080
+          port_range_max: 8080
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 3000
+          port_range_max: 3000
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 9090
+          port_range_max: 9090
+        - remote_ip_prefix: 0.0.0.0/0
+          port_range_min: 5601
+          port_range_max: 5601
 
   internal_security_group:
     type: OS::Neutron::SecurityGroup
@@ -71,10 +92,10 @@ resources:
     type: OS::Neutron::Port
     properties:
       network_id: { get_resource: private_net}
-      security_groups: [ get_resource: ssh_security_group,  get_resource: internal_security_group]
+      security_groups: [ get_resource: external_security_group,  get_resource: internal_security_group]
       fixed_ips:
         - subnet_id: { get_resource: private_subnet}
-          ip_address: 192.168.10.3
+          ip_address: 192.168.10.11
 
   bastion_floating_ip:
     type: OS::Neutron::FloatingIP
@@ -83,29 +104,9 @@ resources:
       port_id: { get_resource: bastion_port }
 
   bastion:
-    type: vm-template.yaml
+    type: template-common.yaml
     properties:
       name: bastion
-      flavor: m1.small
+      flavor: s10.medium
       network_port: { get_resource: bastion_port}
-      ssh_keys: {get_param: ssh_keys}
-
-  # ==================================================
-  # MONGO
-  # ==================================================
-  mongo_port:
-    type: OS::Neutron::Port
-    properties:
-      network_id: { get_resource: private_net}
-      security_groups: [ get_resource: ssh_security_group,  get_resource: internal_security_group]
-      fixed_ips:
-        - subnet_id: { get_resource: private_subnet}
-          ip_address: 192.168.10.4
-
-  mongo:
-    type: vm-template.yaml
-    properties:
-      name: mongo
-      flavor: m1.small
-      network_port: { get_resource: mongo_port }
       ssh_keys: {get_param: ssh_keys}
