--- a/lab_openstack/photo-app-stack.yml
+++ b/lab_openstack/photo-app-stack.yml
@@ -22,24 +22,31 @@ resources:
           port_range_min: 22
           port_range_max: 22
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 80
           port_range_max: 80
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 443
           port_range_max: 443
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 6443
           port_range_max: 6443
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 8080
           port_range_max: 8080
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 3000
           port_range_max: 3000
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 9090
           port_range_max: 9090
         - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
           port_range_min: 5601
           port_range_max: 5601
 
