--- a/app/photo-service/Dockerfile
+++ b/app/photo-service/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.8
 WORKDIR "/code"
 COPY ./requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip install mongoengine Pillow
 COPY ./*.py /code/
 ENV GRACEFUL_TIMEOUT=10
 ENV MONGO_HOST 172.17.0.2
