Fixing the requirements for the photo-service

--- a/app/photo-service/requirements.txt
+++ b/app/photo-service/requirements.txt
@@ -1,5 +1,27 @@
-fastapi>=0.68.0,<0.69.0
-pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
+asgiref==3.5.0
 beanie==1.8.12
-requests
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.3
+fastapi==0.68.2
+grpcio==1.44.0
+grpcio-tools==1.44.0
+h11==0.13.0
+idna==3.3
+mongoengine==0.24.0
+motor==2.5.1
+multidict==6.0.2
+Pillow==9.0.1
+protobuf==3.19.4
+pydantic==1.9.0
+pymongo==3.12.3
+python-multipart==0.0.5
+requests==2.27.1
+six==1.16.0
+starlette==0.14.2
+toml==0.10.2
+typing_extensions==4.1.1
+urllib3==1.26.8
+uvicorn==0.15.0
+yarl==1.7.2
+
