--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,8 +79,9 @@ deploy_photographer:
     entrypoint: [""]
   script:
     - cd app/photographer-service
-    - ls
     - sed -i "s/:latest/:${CI_COMMIT_SHORT_SHA}/g" k8s-photographer.yml
     - kubectl apply -f k8s-photographer.yml
+  after_script:
+    - kubectl describe pod photographer
   environment:
     name: production
