--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,6 +82,6 @@ deploy_photographer:
     - sed -i "s/:latest/:${CI_COMMIT_SHORT_SHA}/g" k8s-photographer.yml
     - kubectl apply -f k8s-photographer.yml
   after_script:
-    - kubectl describe pod photographer
+    - kubectl get pod photographer
   environment:
     name: production
