--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,7 +92,7 @@ test_photo:
   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
   script:
   - cd app/photo-service
-  # - pytest -p no:warnings | true
+  - pytest -p no:warnings
   services:
   - name: mongo:4.4.12
     alias: mongo-test
