changing MONGO_USERNAME to MONGO_USERin the yml files

--- a/app/photographer-service/k8s-photographer.yml
+++ b/app/photographer-service/k8s-photographer.yml
@@ -35,7 +35,7 @@ spec:
           value: "user-photographer-db"
         - name: MONGO_HOST
           value: "mongo.cloud.rennes.enst-bretagne.fr"
-        - name: MONGO_USERNAME
+        - name: MONGO_USER
           valueFrom:
             secretKeyRef:
               name: mongo
