--- a/app/photo-service/k8s-photo.yml
+++ b/app/photo-service/k8s-photo.yml
@@ -30,9 +30,9 @@ spec:
         image: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567/a21cespe/devops-s22_03/photo:latest
         env:
         - name: DATABASE_NAME
-          value: "g03-photographer-db"
+          value: "g03-photo-db"
         - name: AUTH_DATABASE_NAME
-          value: "g03-photographer-db"
+          value: "g03-photo-db"
         - name: MONGO_HOST
           value: "mongo.cloud.rennes.enst-bretagne.fr"
         - name: MONGO_USER
