--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,17 +3,17 @@ stages:
 - release
 - deploy
 
-test_photographer:
-  stage: test
-  variables:
-    MONGO_HOST: mongo-test
-  image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
-  script:
-  - cd app/photographer-service
-  - pytest -p no:warnings
-  services:
-  - name: mongo:4.4.12
-    alias: mongo-test
+# test_photographer:
+#   stage: test
+#   variables:
+#     MONGO_HOST: mongo-test
+#   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
+#   script:
+#   - cd app/photographer-service
+#   - pytest -p no:warnings
+#   services:
+#   - name: mongo:4.4.12
+#     alias: mongo-test
 
 build_photographer:
   stage: release
@@ -30,7 +30,7 @@ build_photographer:
     - ls
     - ls app
     - ls app/scripts
-    - app/scripts/build_script.sh
+    - ./app/scripts/build_before_script.sh
 
     
   script:
@@ -58,17 +58,17 @@ deploy_photographer:
   environment:
     name: production
 
-test_photo:
-  stage: test
-  variables:
-    MONGO_HOST: mongo-test
-  image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
-  script:
-  - cd app/photo-service
-  - pytest -p no:warnings
-  services:
-  - name: mongo:4.4.12
-    alias: mongo-test
+# test_photo:
+#   stage: test
+#   variables:
+#     MONGO_HOST: mongo-test
+#   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
+#   script:
+#   - cd app/photo-service
+#   - pytest -p no:warnings
+#   services:
+#   - name: mongo:4.4.12
+#     alias: mongo-test
 
 build_photo:
   stage: release
@@ -142,17 +142,17 @@ deploy_photo:
   environment:
     name: production
 
-test_filter:
-  stage: test
-  variables:
-    MONGO_HOST: mongo-test
-  image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
-  script:
-  - cd app/filter-service
-  - pytest -p no:warnings
-  services:
-  - name: mongo:4.4.12
-    alias: mongo-test
+# test_filter:
+#   stage: test
+#   variables:
+#     MONGO_HOST: mongo-test
+#   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
+#   script:
+#   - cd app/filter-service
+#   - pytest -p no:warnings
+#   services:
+#   - name: mongo:4.4.12
+#     alias: mongo-test
 
 build_filter:
   stage: release
