maybe it works now?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,21 +3,21 @@ stages:
 - release
 - deploy
 
-# test_photographer:
-#   stage: test
-#   variables:
-#     MONGO_HOST: mongo-test
-#   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
-#   script:
-#   - cd app/photographer-service
-#   - pytest -p no:warnings
-#   services:
-#   - name: mongo:4.4.12
-#     alias: mongo-test
+test_photographer:
+  stage: test
+  variables:
+    MONGO_HOST: mongo-test
+  image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
+  script:
+  - cd app/photographer-service
+  - pytest -p no:warnings
+  services:
+  - name: mongo:4.4.12
+    alias: mongo-test
 
 build_photographer:
   stage: release
-  # needs: ["test_photographer"]
+  needs: ["test_photographer"]
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
@@ -27,8 +27,40 @@ build_photographer:
     HTTPS_PROXY: http://proxy.enst-bretagne.fr:8080
     NO_PROXY: "gitlab-devops.cloud.rennes.enst-bretagne.fr:4567, registry.cloud.rennes.enst-bretagne.fr:5000"
   before_script:
-    - cd app/scripts
-    - ./build_before_script.sh
+    - mkdir -p /kaniko/.docker
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - |
+      echo "-----BEGIN CERTIFICATE-----
+      MIIFQTCCAymgAwIBAgIDdBlgMA0GCSqGSIb3DQEBCwUAMEExCzAJBgNVBAYTAkZS
+      MRcwFQYDVQQKDA5JTVQtQXRsYW50aXF1ZTEZMBcGA1UEAwwQUm9vdCBUZWFjaGlu
+      ZyBDQTAeFw0xNzEwMTUyMjI4MjFaFw0yNzEwMTMyMjI4MjFaMEExCzAJBgNVBAYT
+      AkZSMRcwFQYDVQQKDA5JTVQtQXRsYW50aXF1ZTEZMBcGA1UEAwwQUm9vdCBUZWFj
+      aGluZyBDQTCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIBAMA53qjbSmUZ
+      8bZTH54k4LRSA18BjdI5PMaNaGbBO3dAgEZ26eOuR9pioRtcHjQKoLe/ldPiqunF
+      GrZnwMlh68Wod1BVBsmcW1vw6WD+KK9d2wBfcOCGFO4cKJFIYoxGzMEIOBR8drLO
+      xXhzhTPESPkWDqmTLaMX6ycSfD3qBGY9PlWOHtArKbLSgR2+qWb1LrsiBOqZ0uUy
+      aRW1SnfQUlSbPlduP6xBWS/CWnd91r/VUMjKxItopwKT79EOgl+4fpe8WTo3EkRN
+      flYrEWUFE/FgEq4u5WxGQdp4brvco1ya7PgUjr0ZgMImB0u1uMklcHG1pr0k53/X
+      zO36eHAkgCRwJ9bm8jWto6G6ZNzwjJni00+hzrlNiy9Wz9d84UpY07Y3n7H+pQEf
+      ZyLCyklsoj53khu6Rg47w1IYNorUXzkJxu0esnLp8pXNWd4SmEAYyAKZ/CJgsvPk
+      idZS/mDl+qj+m47xQezjxCoJS+eR2l7Iq2Cs8JdEGXqbJCtfOdvWrfPDBimYwjby
+      pmq/GXFzwjkjyJVJYp/VLv1P1jqssZ2V6B53zb3QbgvI9VTcNuIWQAVIfA++tQLI
+      3ZX6FKrqLYTvLVzLqKPAg4uFzqvU6XloIOdobGNeosDZ3V+FJoIre9sCbCRtffXp
+      LwQWmw/D4uJ2P6Ewe0LUViaGkgSkn2XzAgMBAAGjQjBAMA8GA1UdEwEB/wQFMAMB
+      Af8wDgYDVR0PAQH/BAQDAgEGMB0GA1UdDgQWBBSLPF9tp3Z/h3gR3HnKCbUC0adh
+      KTANBgkqhkiG9w0BAQsFAAOCAgEAb4cqFn8BbKbpYnzpcpxdDe/RLeiyC1q9MCsL
+      LG198oJBZi1WufPsYuTCqW2T3SAt5WYoLjLy2V76Gvg4OSyNmP/OzrasqYmnkDr2
+      kI/LHJ1RewMNb/vjeWmg6vmtecQGdPuaq6fUTpfIzx3b+TM76XqktSO5GF11lNJh
+      8/gkjPKGW2rJ5T41ue1uqYHEwZbuEW0m9Q7eV/PQahEt34VH9B9RI3kzeqnpbSzg
+      FfuiUdv4fxLkN88cPTfoOWPOPaXoqdAz2wCc9yHT6ypMYjxYUL9gJaQy08OoIcO2
+      RR3vQrNqqFArIa18oUtt1REF0KS7w/SAxGKrhwuCcfRg9Z3mSx4gwnrKd6QTN0P+
+      Xk+KTQht/y11ZBLpxcfE0S5fZ1Q6bRx9xUAgqHOEsQiwm4c6pUsXG9V3QnBMt5Ja
+      GqJnHEvEtM4lHPFkfrwXcUeB/gaMvxSRjkMmIBXst8uJL0U+QKj4sSfm1OMJYlmG
+      ag+MOlme4p8TBY+LzqEIbgInlUdYXHw4/uCBMtNQ9ZeRemZJBjkHkpQVgU0DCLlH
+      XxVvZn54tM8Lqw1PYqBKvtpmpAxj3F4NToy6u5NjL1rKXLFmDJdlwv/m0f4Gm7AQ
+      N4QyqV8jvzn5R3xSBvLMjoGjlfBClVVoNRJt8LqYzeLwSkfrrknFYBAo+lX+Vqn6
+      0SnGgM4=
+      -----END CERTIFICATE-----" >> /kaniko/ssl/certs/additional-ca-cert-bundle.crt
 
   script:
     - >-
@@ -55,21 +87,21 @@ deploy_photographer:
   environment:
     name: production
 
-# test_photo:
-#   stage: test
-#   variables:
-#     MONGO_HOST: mongo-test
-#   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
-#   script:
-#   - cd app/photo-service
-#   - pytest -p no:warnings
-#   services:
-#   - name: mongo:4.4.12
-#     alias: mongo-test
+test_photo:
+  stage: test
+  variables:
+    MONGO_HOST: mongo-test
+  image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
+  script:
+  - cd app/photo-service
+  - pytest -p no:warnings
+  services:
+  - name: mongo:4.4.12
+    alias: mongo-test
 
 build_photo:
   stage: release
-  # needs: ["test_photo"]
+  needs: ["test_photo"]
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
@@ -139,21 +171,16 @@ deploy_photo:
   environment:
     name: production
 
-# test_filter:
-#   stage: test
-#   variables:
-#     MONGO_HOST: mongo-test
-#   image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
-#   script:
-#   - cd app/filter-service
-#   - pytest -p no:warnings
-#   services:
-#   - name: mongo:4.4.12
-#     alias: mongo-test
+test_filter:
+  stage: test
+  image: $CI_REGISTRY/$CI_PROJECT_PATH/photoapptest
+  script:
+  - cd app/filter-service
+  - pytest -p no:warnings
 
 build_filter:
   stage: release
-  # needs: ["test_filter"]
+  needs: ["test_filter"]
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
@@ -163,10 +190,49 @@ build_filter:
     HTTPS_PROXY: http://proxy.enst-bretagne.fr:8080
     NO_PROXY: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567
   before_script:
-    - app/scripts/build_before_script.sh
+    - mkdir -p /kaniko/.docker
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - |
+      echo "-----BEGIN CERTIFICATE-----
+      MIIFQTCCAymgAwIBAgIDdBlgMA0GCSqGSIb3DQEBCwUAMEExCzAJBgNVBAYTAkZS
+      MRcwFQYDVQQKDA5JTVQtQXRsYW50aXF1ZTEZMBcGA1UEAwwQUm9vdCBUZWFjaGlu
+      ZyBDQTAeFw0xNzEwMTUyMjI4MjFaFw0yNzEwMTMyMjI4MjFaMEExCzAJBgNVBAYT
+      AkZSMRcwFQYDVQQKDA5JTVQtQXRsYW50aXF1ZTEZMBcGA1UEAwwQUm9vdCBUZWFj
+      aGluZyBDQTCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIBAMA53qjbSmUZ
+      8bZTH54k4LRSA18BjdI5PMaNaGbBO3dAgEZ26eOuR9pioRtcHjQKoLe/ldPiqunF
+      GrZnwMlh68Wod1BVBsmcW1vw6WD+KK9d2wBfcOCGFO4cKJFIYoxGzMEIOBR8drLO
+      xXhzhTPESPkWDqmTLaMX6ycSfD3qBGY9PlWOHtArKbLSgR2+qWb1LrsiBOqZ0uUy
+      aRW1SnfQUlSbPlduP6xBWS/CWnd91r/VUMjKxItopwKT79EOgl+4fpe8WTo3EkRN
+      flYrEWUFE/FgEq4u5WxGQdp4brvco1ya7PgUjr0ZgMImB0u1uMklcHG1pr0k53/X
+      zO36eHAkgCRwJ9bm8jWto6G6ZNzwjJni00+hzrlNiy9Wz9d84UpY07Y3n7H+pQEf
+      ZyLCyklsoj53khu6Rg47w1IYNorUXzkJxu0esnLp8pXNWd4SmEAYyAKZ/CJgsvPk
+      idZS/mDl+qj+m47xQezjxCoJS+eR2l7Iq2Cs8JdEGXqbJCtfOdvWrfPDBimYwjby
+      pmq/GXFzwjkjyJVJYp/VLv1P1jqssZ2V6B53zb3QbgvI9VTcNuIWQAVIfA++tQLI
+      3ZX6FKrqLYTvLVzLqKPAg4uFzqvU6XloIOdobGNeosDZ3V+FJoIre9sCbCRtffXp
+      LwQWmw/D4uJ2P6Ewe0LUViaGkgSkn2XzAgMBAAGjQjBAMA8GA1UdEwEB/wQFMAMB
+      Af8wDgYDVR0PAQH/BAQDAgEGMB0GA1UdDgQWBBSLPF9tp3Z/h3gR3HnKCbUC0adh
+      KTANBgkqhkiG9w0BAQsFAAOCAgEAb4cqFn8BbKbpYnzpcpxdDe/RLeiyC1q9MCsL
+      LG198oJBZi1WufPsYuTCqW2T3SAt5WYoLjLy2V76Gvg4OSyNmP/OzrasqYmnkDr2
+      kI/LHJ1RewMNb/vjeWmg6vmtecQGdPuaq6fUTpfIzx3b+TM76XqktSO5GF11lNJh
+      8/gkjPKGW2rJ5T41ue1uqYHEwZbuEW0m9Q7eV/PQahEt34VH9B9RI3kzeqnpbSzg
+      FfuiUdv4fxLkN88cPTfoOWPOPaXoqdAz2wCc9yHT6ypMYjxYUL9gJaQy08OoIcO2
+      RR3vQrNqqFArIa18oUtt1REF0KS7w/SAxGKrhwuCcfRg9Z3mSx4gwnrKd6QTN0P+
+      Xk+KTQht/y11ZBLpxcfE0S5fZ1Q6bRx9xUAgqHOEsQiwm4c6pUsXG9V3QnBMt5Ja
+      GqJnHEvEtM4lHPFkfrwXcUeB/gaMvxSRjkMmIBXst8uJL0U+QKj4sSfm1OMJYlmG
+      ag+MOlme4p8TBY+LzqEIbgInlUdYXHw4/uCBMtNQ9ZeRemZJBjkHkpQVgU0DCLlH
+      XxVvZn54tM8Lqw1PYqBKvtpmpAxj3F4NToy6u5NjL1rKXLFmDJdlwv/m0f4Gm7AQ
+      N4QyqV8jvzn5R3xSBvLMjoGjlfBClVVoNRJt8LqYzeLwSkfrrknFYBAo+lX+Vqn6
+      0SnGgM4=
+      -----END CERTIFICATE-----" >> /kaniko/ssl/certs/additional-ca-cert-bundle.crt
     
   script:
-    - app/scripts/build_script.sh
+    - >-
+      /kaniko/executor
+      --context "${CI_PROJECT_DIR}/app/photo-service"
+      --dockerfile "${CI_PROJECT_DIR}/app/photo-service/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}/photo:${CI_COMMIT_SHORT_SHA}"
+      --build-arg HTTP_PROXY=${HTTP_PROXY}
+      --build-arg HTTPS_PROXY=${HTTPS_PROXY}
 
       # Again, HTTP(S)_PROXY needed for the docker build with kaniko
 
