--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -154,6 +154,11 @@ build_photo:
       --destination "${CI_REGISTRY_IMAGE}/photo:${CI_COMMIT_SHORT_SHA}"
       --build-arg HTTP_PROXY=${HTTP_PROXY}
       --build-arg HTTPS_PROXY=${HTTPS_PROXY}
+      --skip-tls-verify
+      --insecure
+      --insecure-registry
+      --insecure-pull
+      --registry-mirror registry.cloud.rennes.enst-bretagne.fr:5000
 
       # Again, HTTP(S)_PROXY needed for the docker build with kaniko
 
