filter script fixed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -238,9 +238,9 @@ build_filter:
   script:
     - >-
       /kaniko/executor
-      --context "${CI_PROJECT_DIR}/app/photo-service"
-      --dockerfile "${CI_PROJECT_DIR}/app/photo-service/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}/photo:${CI_COMMIT_SHORT_SHA}"
+      --context "${CI_PROJECT_DIR}/app/filter-service"
+      --dockerfile "${CI_PROJECT_DIR}/app/filter-service/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}/filter:${CI_COMMIT_SHORT_SHA}"
       --build-arg HTTP_PROXY=${HTTP_PROXY}
       --build-arg HTTPS_PROXY=${HTTPS_PROXY}
       --skip-tls-verify
